# opnenv

./: .dockerignore  .gitignore  README.md  app.py  graders.py  inference.py  my_env_v4.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: check_graders.py  configure_hf_space.py  create_github_repo.py  create_hf_space.py  deploy_github.cmd  deploy_hf.cmd  push_both.cmd  run_baseline.py  validate-submission.sh
